<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_homebutton"
            android:title="@string/home" />
    <item
            android:id="@+id/navigation_task"
            android:icon="@drawable/ic_task"
            android:title="@string/task" />
</menu>