<resources>
    <string name="app_name">TODOLIST</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task">Task</string>
    <string name="home">Home</string>
    <string name="reserved_title">Title</string>
    <string name="reserved_description">Description</string>
    <string name="api_key">AIzaSyBEzU8BR9NAdVUpfs7mvizxx3w0DPK2LmI</string>
</resources>
