...
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <!-- 你自己的代码-->
            <com.google.android.material.bottomnavigation.BottomNavigationView
                    android:id="@+id/bottomNavigationView"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/cardview_light_background"
                    app:itemBackground="@null"
                    app:itemIconTint="@drawable/bottom_navigation_selector"
...
